--- a/src/assets/css/admin.less
+++ b/src/assets/css/admin.less
@@ -1,10 +1,26 @@
 @import './common.less';
 .ant-layout-content {
   padding: @p_20;
+
+  // 首页
   .main-container {
     background-color: #fff;
     height: 100%;
     border-radius: 10px;
     padding: @p_20;
   }
+  // 引导页
+  .guide-desc {
+    font-size: 14px;
+    color: #ccc;
+    margin-bottom: 10px;
+    i {
+      font-size: 24px;
+      color: #FFC107;
+    }
+  }
+  .collapseTip {
+    background-color: #f00;
+  }
+ 
 }
