--- a/src/assets/css/header.less
+++ b/src/assets/css/header.less
@@ -8,6 +8,7 @@
     line-height: 64px;
     @d_fr_b();
     .toggle-btn {
+      cursor: pointer;
       .anticon {
         font-size: 26px;
         color: @f_c;
