--- a/src/assets/css/admin.less
+++ b/src/assets/css/admin.less
@@ -22,5 +22,44 @@
   .collapseTip {
     background-color: #f00;
   }
- 
+  
+  // 放大镜效果
+  .magnifier {
+    .box {
+      width: 350px;
+      height: 350px;
+      margin: 100px;
+      border: 1px solid #ccc;
+      position: relative;
+      .big {
+        width: 400px;
+        height: 400px;
+        position: absolute;
+        top: 0;
+        left: 360px;
+        border: 1px solid #ccc;
+        overflow: hidden;
+        display: none;
+        img {
+          position: absolute;
+          width: 800px;
+          max-width: 800px;
+        }
+      }
+      .mask {
+        width: 175px;
+        height: 175px;
+        background: rgba(255, 255, 0, 0.4);
+        position: absolute;
+        top: 0px;
+        left: 0px;
+        cursor: move;
+        display: none;
+      }
+      .small {
+        position: relative;
+      }
+    }
+  }
+
 }
