--- a/src/assets/css/admin.less
+++ b/src/assets/css/admin.less
@@ -1,7 +1,7 @@
 @import './common.less';
 .ant-layout-content {
   padding: @p_20;
-
+  background-color: var(--content-bg);  
   // 首页
   .main-container {
     background-color: #fff;
@@ -62,4 +62,12 @@
     }
   }
 
+}
+.ant-layout-footer {
+    background: var(--fotter-bg);
+    color: var(--sider-bar-item) !important;
+    font-weight: 700;
+}
+.ant-card-bordered {
+    border-width: 0px;
 }
