--- a/src/assets/css/leftNav.less
+++ b/src/assets/css/leftNav.less
@@ -1,11 +1,48 @@
 @h_64: 64px;
 @c_fff: #fff;
-.ant-layout-sider {
-    background-color: #000;
+.ant-layout-sider,
+.ant-menu-dark,
+.ant-menu-inline.ant-menu-sub {
+    background-color: var(--sider-bg) !important;
+    box-shadow: none !important;
 }
-.ant-menu-dark, .ant-menu-dark .ant-menu-sub {
-  background: #000 !important;
+
+.ant-menu-dark,
+.ant-menu-dark.ant-menu-inline {
+    .ant-menu-sub,
+    .ant-menu-item,
+    .ant-menu-submenu-title {
+        color: var(--main-f-color);
+    }
 }
+.ant-menu.ant-menu-dark .ant-menu-item-selected, 
+.ant-menu-submenu-popup.ant-menu-dark .ant-menu-item-selected {
+    background-color: var(--sider-bar-item) !important;
+    a,
+    .anticon + span,
+    .anticon {
+        color: var(--sider-tit);
+        font-weight: 700;                
+    }
+}
+.ant-menu-dark {
+    .ant-menu-item {
+        &> a {
+            color: var(--main-f-color) !important;
+        }
+    }
+    .ant-menu-submenu-title {
+        &:hover {
+            color: var(--sider-tit) !important;
+            font-weight: 700; 
+        }
+    }
+    .ant-menu-item-group-title {
+        color: var(--main-f-color);        
+    }
+}
+
+
 .left-nav {
     width: 100%;
     min-width: 50px;
@@ -17,13 +54,13 @@
         display: flex;
         flex-direction: row;
         line-height: 64px;
-        color: @c_fff;
+        // color: ;
         .ant-avatar {
             margin: 10px; 
             min-width: 40px;
         }
         h1 {
-            color: @c_fff;
+            color: var(--sider-tit);
             font-weight: 600;
             font-size: 16px;
             display: inline-block;
